[gd_scene load_steps=26 format=3 uid="uid://dqffjjipet8pu"]

[ext_resource type="Script" path="res://scenes/main.gd" id="1_8o0da"]
[ext_resource type="PackedScene" uid="uid://bf8ibjhwgc07v" path="res://scenes/character_body_3d.tscn" id="1_fbubj"]
[ext_resource type="PackedScene" uid="uid://t6w3m5onix1r" path="res://scenes/table.tscn" id="2_6vf1i"]
[ext_resource type="Script" path="res://scenes/cells_list.gd" id="2_bis5b"]
[ext_resource type="Script" path="res://scenes/multiplayer.gd" id="3_6botv"]
[ext_resource type="PackedScene" uid="uid://cltyu5l8vkd02" path="res://cell/2d_texture_terrain.tscn" id="3_ji6q1"]
[ext_resource type="PackedScene" uid="uid://cxfdfvyg8vdk3" path="res://cell/2d_texture_token.tscn" id="4_xrduw"]
[ext_resource type="Script" path="res://scenes/cell_debug.gd" id="6_p562j"]
[ext_resource type="PackedScene" uid="uid://d2qotrc3t0aef" path="res://cell/playable/terrain_example_1.tscn" id="7_xfrct"]
[ext_resource type="PackedScene" uid="uid://euerdqfv8hkm" path="res://cell/cell_visual.tscn" id="8_2n2qo"]
[ext_resource type="PackedScene" uid="uid://pqwom6fpnp4o" path="res://dice/d_20.tscn" id="8_n5bcf"]
[ext_resource type="PackedScene" uid="uid://d1yj6i7dldrum" path="res://cell/playable/terrain_example_2.tscn" id="8_tswe3"]
[ext_resource type="PackedScene" uid="uid://b66gfwg27cfec" path="res://cell/playable/figure_example_1.tscn" id="9_2i3pi"]
[ext_resource type="PackedScene" uid="uid://eouh8fgoddvn" path="res://dice/d_4.tscn" id="9_gd67i"]
[ext_resource type="PackedScene" uid="uid://bh3yjm40h16eq" path="res://dice/d_8.tscn" id="10_oye52"]
[ext_resource type="PackedScene" uid="uid://wbp7ukv4010f" path="res://dice/d_6.tscn" id="11_riugc"]
[ext_resource type="PackedScene" uid="uid://bx4hsh7ott313" path="res://dice/d_10.tscn" id="12_q2f08"]
[ext_resource type="PackedScene" uid="uid://bnyg024vxi7vf" path="res://dice/d_12.tscn" id="13_2aj4w"]
[ext_resource type="Script" path="res://scenes/player.gd" id="14_cfvej"]
[ext_resource type="Script" path="res://scenes/obj_select.gd" id="20_boxlu"]
[ext_resource type="PackedScene" uid="uid://dqw5142qc0yo8" path="res://scenes/option_button.tscn" id="21_wn6bu"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_we44t"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_0id6y"]
sky_material = SubResource("ProceduralSkyMaterial_we44t")

[sub_resource type="Environment" id="Environment_oh4rw"]
background_mode = 2
sky = SubResource("Sky_0id6y")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="BoxShape3D" id="BoxShape3D_mbo6n"]
size = Vector3(100, 0.537, 100)

[node name="Main" type="Node3D" node_paths=PackedStringArray("table")]
script = ExtResource("1_8o0da")
table = NodePath("Level/Table")

[node name="CellsList" type="Node" parent="."]
script = ExtResource("2_bis5b")
scenes = Array[PackedScene]([ExtResource("3_ji6q1"), ExtResource("4_xrduw"), ExtResource("9_2i3pi"), ExtResource("7_xfrct"), ExtResource("8_tswe3"), ExtResource("8_n5bcf"), ExtResource("9_gd67i"), ExtResource("10_oye52"), ExtResource("11_riugc"), ExtResource("12_q2f08"), ExtResource("13_2aj4w")])

[node name="Level" type="Node3D" parent="."]

[node name="Player" type="Node3D" parent="Level"]
transform = Transform3D(-1, 0, -1.50996e-07, 0, 1, 0, 1.50996e-07, 0, -1, 0, 0, 0)
script = ExtResource("14_cfvej")

[node name="MovePointX" type="Node3D" parent="Level/Player"]

[node name="CameraMount" type="Node3D" parent="Level/Player/MovePointX"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.52165e-07, 0, 4.98136)

[node name="PlayerCamera" type="Camera3D" parent="Level/Player/MovePointX/CameraMount"]
unique_name_in_owner = true

[node name="LeftClickTimer" type="Timer" parent="Level/Player"]
wait_time = 0.12
one_shot = true

[node name="RightClickTimer" type="Timer" parent="Level/Player"]
wait_time = 0.12
one_shot = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="Level"]
environment = SubResource("Environment_oh4rw")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Level"]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, -19.2704)
shadow_enabled = true

[node name="Table" parent="Level" instance=ExtResource("2_6vf1i")]

[node name="DragPlane" type="StaticBody3D" parent="Level"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Level/DragPlane"]
shape = SubResource("BoxShape3D_mbo6n")

[node name="CellVisual" parent="Level" instance=ExtResource("8_2n2qo")]
unique_name_in_owner = true
visible = false

[node name="Players" type="Node3D" parent="."]

[node name="FocusGrabber" type="Button" parent="."]
unique_name_in_owner = true
visible = false
offset_left = 20000.0
offset_right = 20008.0
offset_bottom = 8.0

[node name="Interface" type="Node2D" parent="."]

[node name="multiplayer" type="Node2D" parent="Interface"]
script = ExtResource("3_6botv")
player_scene = ExtResource("1_fbubj")

[node name="VBoxContainer" type="VBoxContainer" parent="Interface/multiplayer"]
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="Interface/multiplayer/VBoxContainer"]
layout_mode = 2

[node name="host" type="Button" parent="Interface/multiplayer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "host"

[node name="port" type="Label" parent="Interface/multiplayer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "port"

[node name="LineEdit" type="LineEdit" parent="Interface/multiplayer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "25565"
placeholder_text = "25565"
expand_to_text_length = true

[node name="HBoxContainer2" type="HBoxContainer" parent="Interface/multiplayer/VBoxContainer"]
layout_mode = 2

[node name="join" type="Button" parent="Interface/multiplayer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "join"

[node name="port" type="Label" parent="Interface/multiplayer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "port"

[node name="LineEdit" type="LineEdit" parent="Interface/multiplayer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "25565"
placeholder_text = "25565"
expand_to_text_length = true

[node name="ip" type="Label" parent="Interface/multiplayer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "ip"

[node name="LineEdit2" type="LineEdit" parent="Interface/multiplayer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "localhost"
placeholder_text = "localhost"
expand_to_text_length = true

[node name="cell_debug" type="Node2D" parent="Interface"]
position = Vector2(0, 224)
script = ExtResource("6_p562j")

[node name="VBoxContainer" type="VBoxContainer" parent="Interface/cell_debug"]
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="ItemList" type="ItemList" parent="Interface/cell_debug/VBoxContainer"]
custom_minimum_size = Vector2(0, 350)
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Interface/cell_debug/VBoxContainer"]
layout_mode = 2

[node name="ArrangeButton" type="Button" parent="Interface/cell_debug/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "place"

[node name="VBoxContainer" type="VBoxContainer" parent="Interface/cell_debug/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="XBox" type="SpinBox" parent="Interface/cell_debug/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="x" type="Label" parent="Interface/cell_debug/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "x"
horizontal_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="Interface/cell_debug/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="YBox" type="SpinBox" parent="Interface/cell_debug/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="y" type="Label" parent="Interface/cell_debug/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "y"
horizontal_alignment = 1

[node name="CheckBox" type="CheckBox" parent="Interface/cell_debug/VBoxContainer"]
layout_mode = 2
button_mask = 0
text = "BUILD MODE"

[node name="obj_select" type="Node2D" parent="Interface"]
position = Vector2(724, 307)
script = ExtResource("20_boxlu")
menu_button = ExtResource("21_wn6bu")

[node name="PanelContainer" type="PanelContainer" parent="Interface/obj_select"]
offset_right = 270.0
offset_bottom = 72.0

[node name="MarginContainer" type="MarginContainer" parent="Interface/obj_select/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Interface/obj_select/PanelContainer/MarginContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2

[node name="obj_name" type="Label" parent="Interface/obj_select/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "SELECTED OBJECT"
horizontal_alignment = 1

[node name="Control" parent="Interface/obj_select/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("21_wn6bu")]
layout_mode = 2

[connection signal="ready" from="." to="Level/Player" method="_on_main_ready"]
[connection signal="ready" from="." to="Level/CellVisual" method="_on_main_ready"]
[connection signal="ready" from="." to="Interface/multiplayer" method="_on_main_ready"]
[connection signal="ready" from="." to="Interface/cell_debug" method="_on_main_ready"]
[connection signal="timeout" from="Level/Player/LeftClickTimer" to="Level/Player" method="_on_left_click_timer_timeout"]
[connection signal="timeout" from="Level/Player/RightClickTimer" to="Level/Player" method="_on_right_click_timer_timeout"]
[connection signal="pressed" from="Interface/multiplayer/VBoxContainer/HBoxContainer/host" to="Interface/multiplayer" method="_on_host_pressed"]
[connection signal="pressed" from="Interface/multiplayer/VBoxContainer/HBoxContainer2/join" to="Interface/multiplayer" method="_on_join_pressed"]
[connection signal="ready" from="Interface/cell_debug" to="CellsList" method="_on_cell_debug_ready"]
[connection signal="item_clicked" from="Interface/cell_debug/VBoxContainer/ItemList" to="Interface/cell_debug" method="_on_item_list_item_clicked"]
[connection signal="pressed" from="Interface/cell_debug/VBoxContainer/HBoxContainer/ArrangeButton" to="Interface/cell_debug" method="_on_arrange_button_pressed"]
[connection signal="toggled" from="Interface/cell_debug/VBoxContainer/CheckBox" to="Interface/cell_debug" method="_on_check_box_toggled"]
